; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/extr_video_shader_parse.c_video_shader_parse_find_parameter.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/extr_video_shader_parse.c_video_shader_parse_find_parameter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.video_shader_parameter = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.video_shader_parameter* (%struct.video_shader_parameter*, i32, i8*)* @video_shader_parse_find_parameter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.video_shader_parameter* @video_shader_parse_find_parameter(%struct.video_shader_parameter* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.video_shader_parameter*, align 8
  %5 = alloca %struct.video_shader_parameter*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store %struct.video_shader_parameter* %0, %struct.video_shader_parameter** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  store i32 0, i32* %8, align 4
  br label %9

9:                                                ; preds = %29, %3
  %10 = load i32, i32* %8, align 4
  %11 = load i32, i32* %6, align 4
  %12 = icmp ult i32 %10, %11
  br i1 %12, label %13, label %32

13:                                               ; preds = %9
  %14 = load %struct.video_shader_parameter*, %struct.video_shader_parameter** %5, align 8
  %15 = load i32, i32* %8, align 4
  %16 = zext i32 %15 to i64
  %17 = getelementptr inbounds %struct.video_shader_parameter, %struct.video_shader_parameter* %14, i64 %16
  %18 = getelementptr inbounds %struct.video_shader_parameter, %struct.video_shader_parameter* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i8*, i8** %7, align 8
  %21 = call i64 @string_is_equal(i32 %19, i8* %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %28

23:                                               ; preds = %13
  %24 = load %struct.video_shader_parameter*, %struct.video_shader_parameter** %5, align 8
  %25 = load i32, i32* %8, align 4
  %26 = zext i32 %25 to i64
  %27 = getelementptr inbounds %struct.video_shader_parameter, %struct.video_shader_parameter* %24, i64 %26
  store %struct.video_shader_parameter* %27, %struct.video_shader_parameter** %4, align 8
  br label %33

28:                                               ; preds = %13
  br label %29

29:                                               ; preds = %28
  %30 = load i32, i32* %8, align 4
  %31 = add i32 %30, 1
  store i32 %31, i32* %8, align 4
  br label %9

32:                                               ; preds = %9
  store %struct.video_shader_parameter* null, %struct.video_shader_parameter** %4, align 8
  br label %33

33:                                               ; preds = %32, %23
  %34 = load %struct.video_shader_parameter*, %struct.video_shader_parameter** %4, align 8
  ret %struct.video_shader_parameter* %34
}

declare dso_local i64 @string_is_equal(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
